--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.cdnfonts.com/css/gilroy-bold');
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Gilroy-Bold';
+  src: url("../public/assets/fonts/Gilroy-Bold.ttf");
+}
+@font-face {
+  font-family: 'Gilroy-Medium';
+  src: url("../public/assets/fonts/Gilroy-Medium.ttf");
+}
+@font-face {
+  font-family: 'Gilroy-Medium';
+  src: url("../public/assets/fonts/Gilroy-Regular.ttf");
+}
+@font-face {
+  font-family: 'Gilroy-SemiBold';
+  src: url("../public/assets/fonts/Gilroy-SemiBold.ttf");
 }
