created App Store and Popular Dishes Section

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+  }
+}
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 * {
   padding: 0;
@@ -23,3 +37,4 @@
   font-family: 'Gilroy-SemiBold';
   src: url("../public/assets/fonts/Gilroy-SemiBold.ttf");
 }
+
